Code First Entity

--- a/src/CatalogAPI/appsettings.json
+++ b/src/CatalogAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  //Connection string to make connection with the localdb
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CatalogAPI1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
