Improve Warnings for XML comments

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,9 @@ dotnet_diagnostic.SA1600.severity = none
 
 # SA0001: XML comment analysis is disabled due to project configuration
 dotnet_diagnostic.SA0001.severity = none
+
+# SA1615: Element return value should be documented
+dotnet_diagnostic.SA1615.severity = none
+
+# SA1611: Element parameters should be documented
+dotnet_diagnostic.SA1611.severity = none
