--- a/tests/CatalogAPI.Tests/CatalogAPI.Tests.csproj
+++ b/tests/CatalogAPI.Tests/CatalogAPI.Tests.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\CatalogAPI.Domain\CatalogAPI.Domain.csproj" />
     <ProjectReference Include="..\..\src\CatalogAPI\CatalogAPI.csproj" />
   </ItemGroup>
 
