--- a/src/CatalogAPI.Infrastructure/CatalogAPI.Infrastructure.csproj
+++ b/src/CatalogAPI.Infrastructure/CatalogAPI.Infrastructure.csproj
@@ -5,6 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201014132543_InitialCatalog.cs" />
+    <Compile Remove="Migrations\20201014132543_InitialCatalog.Designer.cs" />
+    <Compile Remove="Migrations\20201014140241_CatalogInitial.cs" />
+    <Compile Remove="Migrations\20201014140241_CatalogInitial.Designer.cs" />
+    <Compile Remove="Migrations\20201014140722_InitialCatalog.cs" />
+    <Compile Remove="Migrations\20201014140722_InitialCatalog.Designer.cs" />
+    <Compile Remove="Migrations\20201015093708_InitialCatalog.cs" />
+    <Compile Remove="Migrations\20201015093708_InitialCatalog.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
