--- a/src/AdminUI/appsettings.json
+++ b/src/AdminUI/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+        //Connection string to make connection with the localdb
+        "ConnectionStrings": {
+            "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CatalogAPI1;Trusted_Connection=True;MultipleActiveResultSets=true"
+        },
+        "Logging": {
+            "LogLevel": {
+                "Default": "Information",
+                "Microsoft": "Warning",
+                "Microsoft.Hosting.Lifetime": "Information"
+            }
+        },
+        "AllowedHosts": "*"
     }
-  },
-  "AllowedHosts": "*"
-}
