--- a/src/CatalogAPI/CatalogAPI.csproj
+++ b/src/CatalogAPI/CatalogAPI.csproj
@@ -35,6 +35,7 @@
 
 	<ItemGroup>
 	  <Folder Include="wwwroot\Image\" />
+	  <Folder Include="wwwroot\Image\" />
 	</ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
