fixed bug upload

--- a/src/CatalogAPI/CatalogAPI.csproj
+++ b/src/CatalogAPI/CatalogAPI.csproj
@@ -34,7 +34,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="wwwroot\Image\" />
+	  <Content Include="Controllers\CatalogController.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Folder Include="wwwroot\Image\" />
 	</ItemGroup>
 
