Upload file test (#93)
* Feature/implement files controller (#84)

* FilesController

* FileController createitem & updateitem

* Upload file (#86)

* FilesController

* FileController createitem & updateitem

* Upload Files createitem & updateitem

* Scaffold FileController Actions (#82)

* FileController

* FileControllerFinal

* Update swagger code generation file (#85)

* FileController

* GenerationFile

* fixed bug upload

Co-authored-by: femkevermander <60689534+femkevermander@users.noreply.github.com>

--- a/src/CatalogAPI/CatalogAPI.csproj
+++ b/src/CatalogAPI/CatalogAPI.csproj
@@ -34,6 +34,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Content Include="Controllers\CatalogController.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Folder Include="wwwroot\Image\" />
 	  <Folder Include="wwwroot\Image\" />
 	</ItemGroup>
